--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,11 +2,17 @@
 
 name = "jqsh"
 version = "0.0.1"
-authors = [ "madmalik <matthias.tellen@gmail.com>", "Fenhl <fenhl@fenhl.net>" ]
+authors = [
+    "madmalik <matthias.tellen@gmail.com>",
+    "Fenhl <fenhl@fenhl.net>"
+]
 
 [[bin]]
 name = "jqsh"
-path = "src/main.rs"
+path = "cli/main.rs"
+doc = false
+test = false
+bench = false
 
 [lib]
 name = "jqsh"
