Add precedence value to operator tables

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,6 +25,9 @@ num = "*"
 [dependencies.linked-hash-map]
 git = "https://github.com/contain-rs/linked-hash-map.git" # crates.io version is outdated
 
+#[dependencies.literator]
+#git = "https://github.com/kmcallister/literator.git" # https://github.com/kmcallister/literator/pull/3
+
 [dependencies.readline]
 git = "https://github.com/gwenn/rust-readline.git"
 
